--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,4 +5,7 @@
 @import "../pages/dolci/dolci";
 @import "../pages/admin/admin";
 @import "../components/PopupMessage/popupMessage";
-@import "../components/SingleDolce.tsx/singleDolce";
+@import "../components/SingleDolce/singleDolce";
+@import "../components/ProductList/productList";
+@import "../components/IngredientsInput/ingredientsInput";
+@import "../components/FormComponent/formComponent";
