--- a/pages/dolci/dolci.scss
+++ b/pages/dolci/dolci.scss
@@ -1,6 +1,7 @@
 .main-dolci {
   width: 80%;
   margin-inline: auto;
+  margin-bottom: 5rem;
   h1 {
     font-size: 3rem;
     margin-bottom: 2rem;
