--- a/components/FormComponent/formComponent.scss
+++ b/components/FormComponent/formComponent.scss
@@ -3,7 +3,13 @@
   margin: 2rem auto;
   gap: 2rem;
   background-color: $darkYellow;
+  box-shadow: 0.5rem 0.5rem $darkerYellow2;
+
   padding: 2rem;
+  @media (max-width: $mobile) {
+    padding: 0rem;
+    background-color: initial;
+  }
   @media (max-width: 930px) {
     flex-direction: column;
   }
