--- a/components/Navbar/navbar.scss
+++ b/components/Navbar/navbar.scss
@@ -22,7 +22,8 @@ nav {
     }
   }
   @media (max-width: $mobile) {
-    padding: 1rem 2rem;
+    padding: 1.5rem 2rem;
+    margin-bottom: 0.5rem;
     .logo {
       font-size: 1.25rem;
     }
