--- a/components/ProductList/productList.scss
+++ b/components/ProductList/productList.scss
@@ -1,7 +1,6 @@
 .product-list {
   display: flex;
   flex-direction: column;
-  background-color: $darkYellow;
   padding: 2rem;
   gap: 2rem;
 
@@ -16,12 +15,11 @@
     justify-content: space-between;
     align-items: center;
     height: 60px;
-    background-color: $darkerYellow1;
-    padding-inline: 0.5rem;
+    background-color: white;
+    padding: 2rem 1.5rem;
     gap: 2rem;
-    &:nth-child(even) {
-      background-color: $darkerYellow2;
-    }
+    box-shadow: 0.35rem 0.35rem $darkerYellow2;
+    margin-bottom: 1rem;
     .left {
       display: flex;
       align-items: center;
@@ -70,6 +68,7 @@
       .info {
         flex-direction: column;
         align-items: center;
+        text-align: center;
       }
     }
   }
