--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,6 +4,7 @@
 @import "../pages/home.scss";
 @import "../pages/dolci/dolci";
 @import "../pages/admin/admin";
+@import "../pages/login/login";
 @import "../components/PopupMessage/popupMessage";
 @import "../components/SingleDolce/singleDolce";
 @import "../components/ProductList/productList";
