--- a/pages/login/login.scss
+++ b/pages/login/login.scss
@@ -5,6 +5,9 @@ form.login-form {
   flex-direction: column;
   background-color: white;
   width: 30%;
+  @media (max-width: $mobile) {
+    width: 80%;
+  }
   padding: 2rem;
   box-shadow: 0.5rem 0.5rem 1px $accentColor;
 
